k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog
  labels:
    app.kubernetes.io/name: myblog
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: myblog
