k8s/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
  namespace: myblog
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: myblog
  namespace: myblog
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: myblog
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
     - port: 8080
       protocol: TCP
